# playscenario_prompts

./: .env.example  .gitignore  README.md  dev-requirements.txt  django-guide.md  list_models.py  pyproject.toml
.github/: copilot-instructions.md
config/: agents.yaml  models.yaml
evaluations/: evaluate.py
evaluations/critique_prompts/: check_character_creativity_scored.txt  check_creativity.txt  check_scenario_creativity_scored.txt
evaluations/test_cases/: character_in_simulation.yaml  create_grumpy_pirate.yaml  create_sci_fi_scenario.yaml  edit_grumpy_pirate.yaml  edit_sci_fi_scenario.yaml  scenario_feedback.yaml  scenario_moderator.yaml
playscenario_prompts/_components/: rules_json_output.j2
playscenario_prompts/agents/character_helper/: _system_edit.j2  _user.j2  prompt_factory.py
playscenario_prompts/agents/character_in_simulation/: prompt_factory.py
playscenario_prompts/agents/moderator/: _system.j2  prompt_factory.py
playscenario_prompts/agents/scenario_feedback/: _system.j2  prompt_factory.py
playscenario_prompts/agents/scenario_helper/: _user_edit.j2  prompt_factory.py
prompts/: schemas.py
prompts/_components/: rules_json_output.j2
prompts/agents/character_helper/: _system.j2  _system_edit.j2  _user.j2  _user_edit.j2  prompt_factory.py
prompts/agents/character_in_simulation/: _system.j2  _user.j2  prompt_factory.py
prompts/agents/moderator/: _system.j2  _user.j2  prompt_factory.py
prompts/agents/scenario_feedback/: prompt_factory.py
prompts/agents/scenario_helper/: _system.j2  _system_edit.j2  _user.j2  prompt_factory.py
