[tool.poetry]
name = "playscenario_prompts"
version = "0.1.0"
description = "A standalone, testable, and production-grade library for managing all AI-driven prompt logic."
authors = ["Kris Shkodrani"]
packages = [{include = "playscenario_prompts"}]

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "*"
pydantic = "*"

[tool.poetry.dev-dependencies]
typer = "*"
pyyaml = "*"
google-generativeai = "*"
openai = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
